--- a/Hysploit/Hysploit.csproj
+++ b/Hysploit/Hysploit.csproj
@@ -56,6 +56,9 @@
     <ApplicationIcon>icon new.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Azuki">
+      <HintPath>..\..\..\build-result\azukidll\Azuki.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
