--- a/Hysploit/Hysploit.csproj
+++ b/Hysploit/Hysploit.csproj
@@ -43,7 +43,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>..\..\bruh\</OutputPath>
+    <OutputPath>..\..\..\build-result\Hysploit\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
